--- a/public/homework.html
+++ b/public/homework.html
@@ -18,18 +18,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+    <script src="homework.js"></script>
   </head>
 
   <body>
     <div class="form">
-      <div class="menu">
-        <button style="width: 24%" id="left_button">there</button>
-        <button style="width: 50%" id="login_button">login</button>
-        <button style="width: 24%" id="right_button">here</button>
-      </div>
-      <ul id="hws" class="list">
-      </ul>
+      <div id="task" class="task"></div>
+      <ol class="answers" id="answers">
+      </ol>
+      <button class="confirm" id="confirm_button">submit</button>
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
 
